<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMusicPlayer</string>
    <string name="add_playlist">Playlist hinzufügen</string>
    <string name="edit_playlist">Playlist bearbeiten</string>
    <string name="playlist_manager">PlayList</string>
    <string name="song_list">Song Liste</string>
    <string name="played_song">Gespieltes Lied</string>
    <string name="activ_bluetooth">Bluetoothsignal suchen</string>
    <string name="exit">Exit</string>
    <string name="delete_playlist">Playlist löschen</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="description1">Play music</string>
    <string name="description2">Next track</string>
    <string name="description3">Previous Track</string>
    <string name="description4">Stop</string>
    <string name="description5">Shuffle</string>
    <string name="description6">Replay</string>

    <color name="UserColor">#FFFFFF</color>

    <string-array name="drawerTitles_array">
        <item>Dateibrowser</item>
        <item>Playlist</item>
        <item>Bluetooth-Lautsprecher</item>
    </string-array>

    <string name="title_activity_play_list">PlayListActivity</string>
    <string name="playlist_name">Name der Playlist:</string>
    <string name="played_song_name"></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="search">Suchen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_song_list">SongListActivity</string>

</resources>