<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.imusicplayer.MainActivity" >

    <item
        android:id="@+id/played_song"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/played_song"/>
    <item
        android:id="@+id/song_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/song_list"/>
    <item
        android:id="@+id/playlist_manager"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/playlist_manager"/>
    <item
        android:id="@+id/add_playlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_playlist"/>
    <item
        android:id="@+id/delete_playlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_playlist"/>
    <item
        android:id="@+id/edit_playlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/edit_playlist"/>
    <item
        android:id="@+id/bluetooth_activator"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/activ_bluetooth"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>