<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.imusicplayer.PlayListActivity" >

    <item
        android:id="@+id/add_playlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_playlist"/>
    <item
        android:id="@+id/delete_playlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_playlist"/>
    <item
        android:id="@+id/edit_playlist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/edit_playlist"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>