<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_blau"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imusicplayer.SongListActivity" >

    <LinearLayout
        android:id="@+id/song_list_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wallpaper_blau"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_text_song_search"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Button
                android:id="@+id/bt_search"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/search" />
        </LinearLayout>

        <ListView
            android:id="@+id/songs_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/wallpaper_blau"
            android:choiceMode="singleChoice"
            android:divider="#e3e3e3"
            android:dividerHeight="0.1dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Play_Song_View"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wallpaper_blau"
        android:visibility="invisible" >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton4"
            android:layout_toEndOf="@+id/imageButton4"
            android:layout_toRightOf="@+id/imageButton4"
            android:contentDescription="@string/description1"
            android:src="@drawable/play_icon" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seekBar1"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/seekBar1"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/description4"
            android:src="@drawable/stop_icon" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton1"
            android:layout_toEndOf="@+id/imageButton1"
            android:layout_toRightOf="@+id/imageButton1"
            android:contentDescription="@string/description3"
            android:src="@drawable/prev_track_icon" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton3"
            android:layout_toEndOf="@+id/imageButton3"
            android:layout_toRightOf="@+id/imageButton3"
            android:contentDescription="@string/description2"
            android:src="@drawable/next_track_icon" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton6"
            android:layout_toEndOf="@+id/imageButton3"
            android:layout_toRightOf="@+id/imageButton3"
            android:contentDescription="@string/description6"
            android:src="@drawable/replay_icon" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar1"
            android:layout_alignLeft="@+id/imageButton1"
            android:layout_alignStart="@+id/imageButton1"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:contentDescription="@string/description5"
            android:scaleType="center"
            android:src="@drawable/shuffle_icon" />
    </RelativeLayout>

</RelativeLayout>