<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_blau"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imusicplayer.MainActivity" >

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Ihre Layout-Elemente oder ein Fragment-Container -->

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/wallpaper_blau"
            android:choiceMode="singleChoice"
            android:divider="#e3e3e3"
            android:dividerHeight="0.1dp" />
        
		<ListView
		    android:id="@+id/songs_drawer"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_alignTop="@+id/drawer_layout"
		    android:layout_centerHorizontal="true"
		    android:background="@drawable/wallpaper_blau"
		    android:choiceMode="singleChoice"
		    android:divider="#e3e3e3"
		    android:dividerHeight="0.1dp"
		    android:visibility="invisible" />
		
        
    </android.support.v4.widget.DrawerLayout>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/drawer_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="54dp" />

    
    <ImageButton
        android:contentDescription="@string/description1"
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/drawer_layout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/play_icon" />

    <ImageButton
        android:contentDescription="@string/description2"
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_toRightOf="@+id/imageButton1"
        android:layout_toEndOf="@+id/imageButton1"
        android:src="@drawable/next_track_icon" />

    <ImageButton
        android:contentDescription="@string/description3"
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_toStartOf="@+id/imageButton1"
        android:layout_toLeftOf="@+id/imageButton1"
        android:src="@drawable/prev_track_icon" />

    <ImageButton
        android:contentDescription="@string/description4"
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/drawer_layout"
        android:layout_alignStart="@+id/drawer_layout"
        android:layout_alignLeft="@+id/drawer_layout"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:src="@drawable/stop_icon" />

</RelativeLayout>