<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_blau"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imusicplayer.PlayListActivity" >

    <RelativeLayout
        android:id="@+id/HomePlayListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wallpaper_blau" >

        <ListView
            android:id="@+id/playlist_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/wallpaper_blau"
            android:choiceMode="singleChoice"
            android:divider="#e3e3e3"
            android:dividerHeight="0.1dp"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/AddPlayListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wallpaper_blau"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextPlName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView1"
            android:ems="10" />

        <Button
            android:id="@+id/buttonOkAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextPlName"
            android:text="@string/ok" />

        <Button
            android:id="@+id/buttonCancelAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonOkAdd"
            android:layout_alignBottom="@+id/buttonOkAdd"
            android:layout_alignEnd="@+id/textView1"
            android:layout_alignRight="@+id/textView1"
            android:text="@string/cancel" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/DeletePlayListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wallpaper_blau"
        android:orientation="vertical"
        android:visibility="invisible" >

        <ListView
            android:id="@+id/delete_pl_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.83"
            android:background="@drawable/wallpaper_blau" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/delete_pl"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/delete" />

            <Button
                android:id="@+id/cancel_delete"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/EditPlayListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/wallpaper_blau"
        android:visibility="invisible" >

        <ListView
            android:id="@+id/edit_pl_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:background="@drawable/wallpaper_blau"
            android:choiceMode="singleChoice"
            android:divider="#e3e3e3"
            android:dividerHeight="0.1dp" />
    </RelativeLayout>

</RelativeLayout>